added embroidry options widget on pdp and in cart drawer

--- a/assets/base.css
+++ b/assets/base.css
@@ -3,6 +3,12 @@
   --alpha-button-border: 1;
   --alpha-link: 0.85;
   --alpha-badge-border: 0.1;
+  --Spacing-Desktop-XS: 8px;
+  --sds-size-space-400: 16px;
+  --Radius-Desktop-100: 4px;
+  --Stroke-Border: 1px;
+  --Background-Default-Dominant: #fff;
+  --Border-Default-Secondary: #B3B3B3;
   --focused-base-outline: 0.2rem solid rgba(var(--color-foreground), 0.5);
   --focused-base-outline-offset: 0.3rem;
   --focused-base-box-shadow: 0 0 0 0.3rem rgb(var(--color-background)), 0 0 0.5rem 0.4rem rgba(var(--color-foreground), 0.3);
@@ -716,9 +722,9 @@ summary::-webkit-details-marker {
 }
 
 *:focus-visible {
-  outline: var(--focused-base-outline);
-  outline-offset: var(--focused-base-outline-offset);
-  box-shadow: var(--focused-base-box-shadow);
+  /* outline: var(--focused-base-outline);
+  outline-offset: var(--focused-base-outline-offset); */
+  /* box-shadow: var(--focused-base-box-shadow); */
 }
 
 /* Fallback - for browsers that don't support :focus-visible, a fallback is set for :focus */
