--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -105,3 +105,248 @@
   --tw-contain-paint:  ;
   --tw-contain-style:  
 }
+
+.tw-absolute {
+  position: absolute
+}
+
+.tw-relative {
+  position: relative
+}
+
+.tw-left-\[0\] {
+  left: 0
+}
+
+.tw-top-\[0\] {
+  top: 0
+}
+
+.tw-col-span-4 {
+  grid-column: span 4 / span 4
+}
+
+.tw-m-0 {
+  margin: 0px
+}
+
+.tw-mb-\[40px\] {
+  margin-bottom: 40px
+}
+
+.tw-flex {
+  display: flex
+}
+
+.tw-hidden {
+  display: none
+}
+
+.tw-h-\[20px\] {
+  height: 20px
+}
+
+.tw-h-\[228px\] {
+  height: 228px
+}
+
+.tw-h-\[26px\] {
+  height: 26px
+}
+
+.tw-h-\[40px\] {
+  height: 40px
+}
+
+.tw-max-h-0 {
+  max-height: 0px
+}
+
+.tw-w-\[20px\] {
+  width: 20px
+}
+
+.tw-w-\[228px\] {
+  width: 228px
+}
+
+.tw-w-\[40px\] {
+  width: 40px
+}
+
+.tw-w-full {
+  width: 100%
+}
+
+.tw-min-w-\[160px\] {
+  min-width: 160px
+}
+
+.tw-min-w-\[93px\] {
+  min-width: 93px
+}
+
+.tw-flex-1 {
+  flex: 1 1 0%
+}
+
+.tw-flex-\[1_0_0\] {
+  flex: 1 0 0
+}
+
+.tw-flex-shrink-0 {
+  flex-shrink: 0
+}
+
+.tw-cursor-pointer {
+  cursor: pointer
+}
+
+.tw-flex-col {
+  flex-direction: column
+}
+
+.tw-content-center {
+  align-content: center
+}
+
+.tw-items-start {
+  align-items: flex-start
+}
+
+.tw-items-center {
+  align-items: center
+}
+
+.tw-justify-center {
+  justify-content: center
+}
+
+.tw-justify-between {
+  justify-content: space-between
+}
+
+.tw-gap-2 {
+  gap: 0.5rem
+}
+
+.tw-gap-\[16px\] {
+  gap: 16px
+}
+
+.tw-gap-\[24px\] {
+  gap: 24px
+}
+
+.tw-gap-\[40px\] {
+  gap: 40px
+}
+
+.tw-gap-\[8px\] {
+  gap: 8px
+}
+
+.tw-self-stretch {
+  align-self: stretch
+}
+
+.tw-overflow-hidden {
+  overflow: hidden
+}
+
+.tw-rounded-\[4px\] {
+  border-radius: 4px
+}
+
+.tw-rounded-\[var\(--Radius-Desktop-100\)\] {
+  border-radius: var(--Radius-Desktop-100)
+}
+
+.tw-rounded-full {
+  border-radius: 9999px
+}
+
+.tw-rounded-lg {
+  border-radius: 0.5rem
+}
+
+.tw-border {
+  border-width: 1px
+}
+
+.tw-border-\[1px\] {
+  border-width: 1px
+}
+
+.tw-border-solid {
+  border-style: solid
+}
+
+.tw-border-\[var\(--Border-Default-Secondary\)\] {
+  border-color: var(--Border-Default-Secondary)
+}
+
+.tw-bg-\[var\(--Background-Default-Dominant\)\] {
+  background-color: var(--Background-Default-Dominant)
+}
+
+.tw-object-cover {
+  -o-object-fit: cover;
+     object-fit: cover
+}
+
+.tw-p-\[16px\] {
+  padding: 16px
+}
+
+.tw-p-0 {
+  padding: 0px
+}
+
+.tw-px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem
+}
+
+.tw-px-\[var\(--sds-size-space-400\)\] {
+  padding-left: var(--sds-size-space-400);
+  padding-right: var(--sds-size-space-400)
+}
+
+.tw-py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem
+}
+
+.tw-py-\[var\(--Spacing-Desktop-XS\)\] {
+  padding-top: var(--Spacing-Desktop-XS);
+  padding-bottom: var(--Spacing-Desktop-XS)
+}
+
+.tw-px-\[16px\] {
+  padding-left: 16px;
+  padding-right: 16px
+}
+
+.tw-py-\[12px\] {
+  padding-top: 12px;
+  padding-bottom: 12px
+}
+
+.tw-pl-\[2px\] {
+  padding-left: 2px
+}
+
+.tw-text-\[14px\] {
+  font-size: 14px
+}
+
+.tw-text-\[16px\] {
+  font-size: 16px
+}
+
+@media (min-width: 1100px) {
+  .lmd\:tw-flex-row {
+    flex-direction: row
+  }
+}
