--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -40,7 +40,6 @@
         product,
         id: product_form_id,
         class: 'form',
-        novalidate: 'novalidate',
         data-type: 'add-to-cart-form'
       -%}
         <input
@@ -59,7 +58,7 @@
         {%- if gift_card_recipient_feature_active -%}
           {%- render 'gift-card-recipient-form', product: product, form: form, section: section -%}
         {%- endif -%}
-
+{% render 'embroidry-item' %}
         <div class="product-form__buttons">
           {%- liquid
             assign check_against_inventory = true
@@ -149,3 +148,4 @@
     <script src="{{ 'pickup-availability.js' | asset_url }}" defer="defer"></script>
   {%- endif -%}
 </div>
+
