--- a/snippets/embroidry-item.liquid
+++ b/snippets/embroidry-item.liquid
@@ -114,7 +114,7 @@
         {% for font in fonts %}
           {% assign fixedfont = font | remove: '[' | remove: '"' | remove: ']' %}
           {% if fixedfont == value %}
-          <span class="font_option tw-border tw-border-[1px] tw-border-solid tw-border-[var(--Border-Default-Secondary)] tw-rounded-[4px] tw-flex tw-min-w-[93px] tw-px-2.5 tw-py-3 tw-justify-center tw-items-center tw-gap-2 tw-flex-1 tw-cursor-pointer" font="{{ fixedfont }}">
+          <span class="font_option font_copse tw-border tw-border-[1px] tw-border-solid tw-border-[var(--Border-Default-Secondary)] tw-rounded-[4px] tw-flex tw-min-w-[93px] tw-px-2.5 tw-py-3 tw-justify-center tw-items-center tw-gap-2 tw-flex-1 tw-cursor-pointer" font="{{ fixedfont }}">
               {{ fixedfont }}
           </span>
           {% endif %}
