--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -471,7 +471,7 @@
                           <div class="embroidery_widget_container tw-relative tw-w-full tw-flex tw-items-center tw-self-stretch" added-foritem="{{ item.title |  escape }}">
                          
                             <div class="tw-left-[0] tw-flex tw-items-center tw-gap-[8px] tw-top-[0] select-embroidry">
-                            <span class="checkbox-icon tw-flex tw-w-[20px] tw-h-[20px] tw-items-center tw-justify-center">
+                            <span class="tw-cursor-pointer checkbox-icon tw-flex tw-w-[20px] tw-h-[20px] tw-items-center tw-justify-center">
                               <svg xmlns="http://www.w3.org/2000/svg" class="uncheck tw-flex tw-content-center" width="20" height="20" viewBox="0 0 20 20" fill="none">
                       <path d="M2.5 10C2.5 6.71252 2.5 5.06878 3.40796 3.96243C3.57418 3.75989 3.75989 3.57418 3.96243 3.40796C5.06878 2.5 6.71252 2.5 10 2.5V2.5C13.2875 2.5 14.9312 2.5 16.0376 3.40796C16.2401 3.57418 16.4258 3.75989 16.592 3.96243C17.5 5.06878 17.5 6.71252 17.5 10V10C17.5 13.2875 17.5 14.9312 16.592 16.0376C16.4258 16.2401 16.2401 16.4258 16.0376 16.592C14.9312 17.5 13.2875 17.5 10 17.5V17.5C6.71252 17.5 5.06878 17.5 3.96243 16.592C3.75989 16.4258 3.57418 16.2401 3.40796 16.0376C2.5 14.9312 2.5 13.2875 2.5 10V10Z" stroke="#1E1E1E"></path>
                     </svg>
@@ -480,7 +480,7 @@
                       <path d="M6.66634 10L9.16634 12.5L13.333 7.5" stroke="white"></path>
                     </svg>
                             </span>
-                            <label class="tw-text-[16px] body-medium-font" for="accept-embroidery">
+                            <label class="tw-cursor-pointer tw-text-[16px] body-medium-font" for="accept-embroidery">
                               Add Embroidered Name
                             </label>
                             </div>
