--- a/snippets/embroidry-item.liquid
+++ b/snippets/embroidry-item.liquid
@@ -9,12 +9,12 @@
     <div class="embroidry_options default-secondry-bg tw-p-[16px] tw-mb-[40px] tw-flex tw-flex-col tw-gap-[16px]">
       <div class="embroidry_option_checkbox tw-relative tw-w-full tw-flex tw-justify-between tw-items-center tw-self-stretch">
         <input type="checkbox" aria-label="Add Embroidered Name" id="accept-embroidery" />
-        <div class="tw-absolute tw-left-[0] tw-flex tw-items-center tw-gap-[8px] tw-top-[0] select-embroidry">
+        <div class="tw-cursor-pointer tw-absolute tw-left-[0] tw-flex tw-items-center tw-gap-[8px] tw-top-[0] select-embroidry">
         <span class="checkbox-icon tw-flex tw-w-[20px] tw-h-[20px] tw-items-center tw-justify-center">
           {% render 'uncheck' %}
           {% render 'checked-icon' %}
         </span>
-        <label class="tw-text-[16px] body-medium-font" for="accept-embroidery">
+        <label class="tw-cursor-pointer tw-text-[16px] body-medium-font" for="accept-embroidery">
           Add Embroidered Name
         </label>
         </div>
